--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2805,6 +2805,7 @@ def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, upwind
     - max_spread_direction   :: (x, y, z) unit vector
     - max_spread_vector      :: (x: m/min, y: m/min, z: m/min)
     - max_fireline_intensity :: kW/m
+    - max_flame_length       :: m
     - length_to_width_ratio  :: unitless (1: circular spread, > 1: elliptical spread)
     - eccentricity           :: unitless (0: circular spread, > 0: elliptical spread)
     """
@@ -2833,13 +2834,15 @@ def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, upwind
     (limited_wind_speed, limited_phi_E) = maybe_limit_wind_speed(use_wind_limit, max_wind_speed,
                                                                  get_phi_W, get_wind_speed, phi_E)
     # Calculate and return max surface fire behavior values
-    max_spread_rate       = spread_rate * (1.0 + limited_phi_E)
-    length_to_width_ratio = surface_length_to_width_ratio(limited_wind_speed)
+    max_spread_rate        = spread_rate * (1.0 + limited_phi_E)
+    max_fireline_intensity = fireline_intensity * (1.0 + limited_phi_E)
+    length_to_width_ratio  = surface_length_to_width_ratio(limited_wind_speed)
     return {
         "max_spread_rate"       : max_spread_rate,
         "max_spread_direction"  : max_spread_direction, # unit vector
         "max_spread_vector"     : max_spread_rate * max_spread_direction,
-        "max_fireline_intensity": fireline_intensity * (1.0 + limited_phi_E),
+        "max_fireline_intensity": max_fireline_intensity,
+        "max_flame_length"      : calc_flame_length(max_fireline_intensity),
         "length_to_width_ratio" : length_to_width_ratio,
         "eccentricity"          : surface_fire_eccentricity(length_to_width_ratio),
     }
@@ -2893,6 +2896,7 @@ def calc_surface_fire_behavior_in_direction(surface_fire_max, spread_direction):
       - max_spread_direction   :: (x, y, z) unit vector
       - max_spread_vector      :: (x: m/min, y: m/min, z: m/min)
       - max_fireline_intensity :: kW/m
+      - max_flame_length       :: m
       - length_to_width_ratio  :: unitless (1: circular spread, > 1: elliptical spread)
       - eccentricity           :: unitless (0: circular spread, > 0: elliptical spread)
     - spread_direction     :: 3D unit vector on the slope-tangential plane
@@ -2902,6 +2906,7 @@ def calc_surface_fire_behavior_in_direction(surface_fire_max, spread_direction):
     - spread_rate        :: m/min
     - spread_direction   :: (x, y, z) unit vector
     - fireline_intensity :: kW/m
+    - flame_length       :: m
     """
     # Unpack max surface fire behavior values
     max_spread_rate        = surface_fire_max["max_spread_rate"]
@@ -2912,11 +2917,14 @@ def calc_surface_fire_behavior_in_direction(surface_fire_max, spread_direction):
     cos_w = np.dot(max_spread_direction, np.asarray(spread_direction))
     # Calculate adjustment due to the offset angle from the max spread direction
     adjustment = (1.0 - eccentricity) / (1.0 - eccentricity * cos_w)
+    # Update surface fire behavior values by the adjustment value
+    fireline_intensity = max_fireline_intensity * adjustment
     return {
         "fire_type"         : "surface",
         "spread_rate"       : max_spread_rate * adjustment,
         "spread_direction"  : spread_direction,
-        "fireline_intensity": max_fireline_intensity * adjustment,
+        "fireline_intensity": fireline_intensity,
+        "flame_length"      : calc_flame_length(fireline_intensity),
     }
 #+end_src
 
@@ -3084,6 +3092,7 @@ Surface Fire Behavior Max (Limited) for Fuel Model GR1 with Fuel Moisture = [0.0
 {'eccentricity': 0.8693098652160369,
  'length_to_width_ratio': 2.0231959552088243,
  'max_fireline_intensity': 32.52824122084378,
+ 'max_flame_length': 0.3843932850124078,
  'max_spread_direction': array([0.57514211, 0.80992593, 0.11502842]),
  'max_spread_rate': 2.2964672435747526,
  'max_spread_vector': array([1.32079503, 1.85996837, 0.26415901])}
@@ -3092,6 +3101,7 @@ Surface Fire Behavior Max (Unlimited) for Fuel Model GR1 with Fuel Moisture = [0
 {'eccentricity': 0.9845208632281957,
  'length_to_width_ratio': 5.705566830080509,
  'max_fireline_intensity': 330.523270465988,
+ 'max_flame_length': 1.1167831782666553,
  'max_spread_direction': array([0.57514211, 0.80992593, 0.11502842]),
  'max_spread_rate': 23.334672745170035,
  'max_spread_vector': array([13.42075301, 18.8993565 ,  2.6841506 ])}
@@ -3164,18 +3174,21 @@ pprint(backing_fire_behavior)
 Heading Fire Behavior for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
  'fireline_intensity': 32.528241220843725,
+ 'flame_length': 0.38439328501240755,
  'spread_direction': array([0.57514211, 0.80992593, 0.11502842]),
  'spread_rate': 2.2964672435747486}
 
 Flanking Fire Behavior for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
  'fireline_intensity': 4.251120229437338,
+ 'flame_length': 0.15074658520504813,
  'spread_direction': array([ 0.79419771, -0.58653217,  0.15883954]),
  'spread_rate': 0.3001256135897406}
 
 Backing Fire Behavior for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
  'fireline_intensity': 2.2741656204473273,
+ 'flame_length': 0.11305091610423659,
  'spread_direction': array([-0.57514211, -0.80992593, -0.11502842]),
  'spread_rate': 0.160554234038162}
 #+end_example
@@ -3667,8 +3680,9 @@ location, their combined behavior determines the spread rate and
 intensity values associated with this location. Specifically, their
 combined spread rate is the maximum of the two spread rates and their
 combined fireline intensity is the sum of their two fireline
-intensities. The fire type associated with this combined fire will be
-the crown fire type.
+intensities. Their combined flame length is the flame length of their
+combined fireline intensities. The fire type associated with this
+combined fire will be the crown fire type.
 
 *Note:* Since the surface fire and crown fire each define separate
 fire spread ellipses with potentially different maximum spread
@@ -3677,9 +3691,6 @@ compared in a given absolute direction in the slope-tangential plane.
 
 #+name: combined-fire-behavior
 #+begin_src python
-import pyretechnics.conversion as conv
-
-
 def calc_combined_fire_behavior(surface_fire_behavior, crown_fire_behavior):
     """
     Given these inputs:
@@ -3688,6 +3699,7 @@ def calc_combined_fire_behavior(surface_fire_behavior, crown_fire_behavior):
       - spread_rate            :: m/min
       - spread_direction       :: (x, y, z) unit vector
       - fireline_intensity     :: kW/m
+      - flame_length           :: m
     - crown_fire_behavior   :: dictionary of crown fire behavior values
       - fire_type              :: "passive_crown" or "active_crown"
       - spread_rate            :: m/min
@@ -3699,6 +3711,7 @@ def calc_combined_fire_behavior(surface_fire_behavior, crown_fire_behavior):
     - spread_rate        :: m/min
     - spread_direction   :: (x, y, z) unit vector
     - fireline_intensity :: kW/m
+    - flame_length       :: m
     """
     # Unpack the surface fire behavior values
     surface_spread_rate        = surface_fire_behavior["spread_rate"]        # m/min
@@ -3717,6 +3730,7 @@ def calc_combined_fire_behavior(surface_fire_behavior, crown_fire_behavior):
             "spread_rate"       : surface_spread_rate,
             "spread_direction"  : surface_spread_direction,
             "fireline_intensity": surface_fireline_intensity + crown_fireline_intensity,
+            "flame_length"      : calc_crown_fire_flame_length(surface_fireline_intensity, crown_fireline_intensity),
         }
     else:
         # Crown fire spreads faster
@@ -3725,6 +3739,7 @@ def calc_combined_fire_behavior(surface_fire_behavior, crown_fire_behavior):
             "spread_rate"       : crown_spread_rate,
             "spread_direction"  : crown_spread_direction,
             "fireline_intensity": surface_fireline_intensity + crown_fireline_intensity,
+            "flame_length"      : calc_crown_fire_flame_length(surface_fireline_intensity, crown_fireline_intensity),
         }
 #+end_src
 
@@ -4277,6 +4292,7 @@ else:
 : ============================================================
 : {'fire_type': 'surface',
 :  'fireline_intensity': 11.637272000784206,
+:  'flame_length': 0.23956726229329667,
 :  'spread_direction': array([0.87038828, 0.        , 0.49236596]),
 :  'spread_rate': 0.8215818916531423}
 
@@ -4350,6 +4366,7 @@ def burn_cell_as_head_fire(space_time_cubes, space_time_coordinate,
     - spread_rate        :: m/min
     - spread_direction   :: (x, y, z) unit vector on the slope-tangential plane
     - fireline_intensity :: kW/m
+    - flame_length       :: m
     """
     #================================================================================================
     # Destructure the space_time_coordinate
@@ -4416,6 +4433,7 @@ def burn_cell_as_head_fire(space_time_cubes, space_time_coordinate,
             "spread_rate"       : 0.0,
             "spread_direction"  : spread_direction,
             "fireline_intensity": 0.0,
+            "flame_length"      : 0.0,
         }
 
     else:
@@ -4579,6 +4597,7 @@ def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth,
     - spread_rate        :: m/min
     - spread_direction   :: (x, y, z) unit vector on the slope-tangential plane
     - fireline_intensity :: kW/m
+    - flame_length       :: m
     """
     #================================================================================================
     # Destructure the space_time_coordinate
@@ -4645,6 +4664,7 @@ def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth,
             "spread_rate"       : 0.0,
             "spread_direction"  : spread_direction,
             "fireline_intensity": 0.0,
+            "flame_length"      : 0.0,
         }
 
     else:
@@ -4847,6 +4867,7 @@ Fire Behavior from Combined Surface and Crown Fire (with Wind Limit) at coordina
 ====================================================================================================
 {'fire_type': 'surface',
  'fireline_intensity': 32.52824122084378,
+ 'flame_length': 0.3843932850124078,
  'spread_direction': array([0.48686888, 0.61304249, 0.62220383]),
  'spread_rate': 2.2964672435747526}
 
@@ -4854,6 +4875,7 @@ Fire Behavior from Combined Surface and Crown Fire (without Wind Limit) at coord
 ====================================================================================================
 {'fire_type': 'surface',
  'fireline_intensity': 50.61290793356301,
+ 'flame_length': 0.47108157472046464,
  'spread_direction': array([0.48686888, 0.61304249, 0.62220383]),
  'spread_rate': 3.573229932180057}
 #+end_example
@@ -4948,6 +4970,7 @@ Fire Behavior from Combined Surface and Crown Fire (with Wind Limit) at coordina
 ====================================================================================================
 {'fire_type': 'surface',
  'fireline_intensity': 11.637272000784206,
+ 'flame_length': 0.23956726229329667,
  'spread_direction': array([8.70388280e-01, 5.32959110e-17, 4.92365964e-01]),
  'spread_rate': 0.8215818916531423}
 
@@ -4955,6 +4978,7 @@ Fire Behavior from Combined Surface and Crown Fire (without Wind Limit) at coord
 ====================================================================================================
 {'fire_type': 'surface',
  'fireline_intensity': 13.898200796816093,
+ 'flame_length': 0.2599542202128164,
  'spread_direction': array([8.70388280e-01, 5.32959110e-17, 4.92365964e-01]),
  'spread_rate': 0.9812016167065538}
 #+end_example
@@ -6727,6 +6751,7 @@ def test_burn_cell_as_head_fire():
         "spread_rate"       : 0.32044995422500555,
         "spread_direction"  : [0.644528432121562, 0.7414451458683358, 0.18666064356259804],
         "fireline_intensity": 26.66139842420774,
+        "flame_length"      : 0.3507858529698898,
     }
     return result
 #+end_src
@@ -6774,7 +6799,7 @@ def test_burn_all_cells_as_head_fire():
             max_spread_rate_matrix[y,x]        = results["spread_rate"]
             max_spread_direction_matrix[y,x]   = spread_direction_vector_to_angle(results["spread_direction"])
             max_fireline_intensity_matrix[y,x] = results["fireline_intensity"]
-            # max_flame_length_matrix[y,x]       = results["flame_length"] # FIXME: No value for this field
+            max_flame_length_matrix[y,x]       = results["flame_length"]
 
     return {
         "max_fire_type"         : max_fire_type_matrix,
@@ -6907,8 +6932,8 @@ savefig(title="Max Fireline Intensity", layer="max_fireline_intensity", units="k
 
 [[file:../doc/pics/worcester_max_fireline_intensity.png]]
 
-# #+begin_src python
-# savefig(title="Max Flame Length", layer="max_flame_length", units="m", colors="hot")
-# #+end_src
+#+begin_src python
+savefig(title="Max Flame Length", layer="max_flame_length", units="m", colors="hot")
+#+end_src
 
-# [[file:../doc/pics/worcester_max_flame_length.png]]
+[[file:../doc/pics/worcester_max_flame_length.png]]
