--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -1480,8 +1480,10 @@ The following fuel models are supported:
 - Anderson 13: no dynamic loading
 - Scott & Burgan 40: dynamic loading implemented according to Scott & Burgan 2005
 
-In the following sections, we describe the operation of this system in
-detail.
+As a library, Pyretechnics has the flexibility to implement more than
+one such algorithm for the purposes of comparison in both performance
+and accuracy. The following sections will introduce the spread
+algorithms implemented thus far.
 
 * Fuel Model and Moisture Definitions (pyretechnics.fuel_models)
 ** For Developers
@@ -4994,7 +4996,7 @@ Fire Behavior from Combined Surface and Crown Fire (without Wind Limit) at coord
  'spread_rate': 0.9812016167065538}
 #+end_example
 
-* [WIP] Fire Spread Algorithms (pyretechnics.eulerian_level_set)
+* [WIP] Fire Spread Algorithm: Eulerian Level Set Method (pyretechnics.eulerian_level_set)
 ** For Developers
    :PROPERTIES:
    :header-args:python+: :session *pyretechnics.eulerian_level_set*
@@ -5004,25 +5006,21 @@ Fire Behavior from Combined Surface and Crown Fire (without Wind Limit) at coord
 
 In order to simulate the spread of a fire from a starting point or
 perimeter, we will need to implement a model that projects the
-one-dimensional spread and intensity equations presented above into
-the three-dimensional space-time cube introduced in section [[Data
-Model]].
+one-dimensional spread and intensity equations presented in sections
+[[Surface Fire Equations (pyretechnics.surface_fire)]] and [[Crown Fire
+Equations (pyretechnics.crown_fire)]] into the three-dimensional
+space-time cube introduced in section [[Data Model]].
 
-As a library, Pyretechnics has the flexibility to implement more than
-one such algorithm for the purposes of comparison in both performance
-and accuracy. The following sections will introduce the spread
-algorithms implemented thus far.
+This section introduces the equations used in the Eulerian level set
+method of fire spread, operationalized in Chris Lautenberger's ELMFIRE
+model[fn::https://elmfire.io].
 
-*** Eulerian Level Set Method
+*** The $\phi$ Field
 
-**** The $\phi$ Field
-
-In the Eulerian level set method of fire spread, operationalized in
-Chris Lautenberger's ELMFire model[fn::https://elmfire.io], a
-continuous field called $\phi$ fills the simulation space and is used
-to track the progression of the fire front through space and time.
-Within Pyretechnics, the $\phi$ field is discretized into grid cells
-and initialized with the following values:
+In this model, a continuous field called $\phi$ fills the simulation
+space and is used to track the progression of the fire front through
+space and time. Within Pyretechnics, the $\phi$ field is discretized
+into grid cells and initialized with the following values:
 
 - -1 for cells that have already been burned and are inside the fire perimeter
 - 1 for cells that have not been burned and are outside the fire perimeter
@@ -5032,7 +5030,7 @@ perimeter, the $\phi$ grid cells indicate the initially burning region.
 If a point fire is being simulated, then a single $\phi$ cell will be
 set to -1 and the remaining cells will have the value 1.
 
-**** Fire Front Normal Vector
+*** Fire Front Normal Vector
 
 In this fire spread algorithm, the fire front only propagates normal
 to itself. Given a $\phi$ raster, we can calculate the normal vector to
@@ -5054,9 +5052,12 @@ $\phi$ raster's grid cells.
   \left(\frac{\partial \phi}{\partial y}\right)_{i,j} &\approx \frac{\phi_{i,j+1} - \phi_{i,j-1}}{2 \Delta y}
 \end{align}
 
-#+name: phi-field-spatial-gradients
-#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
-def calc_dphi_dx_approx(phi, x, y, dx):
+#+name: phi-field-spatial-gradients-approx
+#+begin_src python
+import numpy as np
+
+
+def calc_dphi_dx_approx(phi, dx, x, y):
     """
     Calculate the spatial gradient of the phi raster in the x (west->east)
     direction at grid cell (x,y) given the cell width dx.
@@ -5068,7 +5069,7 @@ def calc_dphi_dx_approx(phi, x, y, dx):
     return (phi[y][x+1] - phi[y][x-1]) / (2.0 * dx)
 
 
-def calc_dphi_dy_approx(phi, x, y, dy):
+def calc_dphi_dy_approx(phi, dy, x, y):
     """
     Calculate the spatial gradient of the phi raster in the y (south->north)
     direction at grid cell (x,y) given the cell height dy.
@@ -5078,6 +5079,16 @@ def calc_dphi_dy_approx(phi, x, y, dy):
           to the east, and as y increases, we move to the south.
     """
     return (phi[y-1][x] - phi[y+1][x]) / (2.0 * dy)
+
+
+def calc_phi_gradient_approx(phi, dx, dy, x, y):
+    """
+    Calculate the spatial gradient of the phi raster at grid cell (x,y)
+    given the cell width dx and the cell height dy.
+    """
+    dphi_dx = calc_dphi_dx_approx(phi, dx, x, y)
+    dphi_dy = calc_dphi_dy_approx(phi, dy, x, y)
+    return np.asarray((dphi_dx, dphi_dy))
 #+end_src
 
 We can now combine these spatial gradients with the magnitude of the
@@ -5085,34 +5096,22 @@ gradient of the $\phi$ field at any location on the grid to compute
 the fire front normal vector as follows:
 
 #+name: phi-field-normal-vector
-#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
-from math import sqrt
-
-def calc_phi_gradient_magnitude(dphi_dx, dphi_dy):
-    """Calculate the magnitude of the gradient of the phi field."""
-    return sqrt(dphi_dx ** 2 + dphi_dy ** 2)
+#+begin_src python
+import pyretechnics.vector_utils as vu
 
 
 def calc_phi_normal_vector(phi, dx, dy, x, y):
     """
     Calculate the phi field normal vector in the x and y dimensions.
 
-    n_x: eastward component of the unit normal vector
-    n_y: northward component of the unit normal vector
+    - n_x: eastward component of the unit normal vector
+    - n_y: northward component of the unit normal vector
     """
-    dphi_dx = calc_dphi_dx_approx(phi, x, y, dx)
-    dphi_dy = calc_dphi_dy_approx(phi, x, y, dy)
-    if dphi_dx == 0.0 and dphi_dy == 0.0:
-        return {
-            "n_x": 0.0,
-            "n_y": 0.0,
-        }
+    phi_gradient = calc_phi_gradient_approx(phi, dx, dy, x, y)
+    if phi_gradient[0] == 0.0 and phi_gradient[1] == 0.0:
+        return phi_gradient # (n_x, n_y)
     else:
-        phi_gradient_magnitude = calc_phi_gradient_magnitude(dphi_dx, dphi_dy)
-        return {
-            "n_x": dphi_dx / phi_gradient_magnitude,
-            "n_y": dphi_dy / phi_gradient_magnitude,
-        }
+        return vu.as_unit_vector(phi_gradient) # (n_x, n_y)
 #+end_src
 
 Next, we can use the following geometrical relations to calculate the
@@ -5132,31 +5131,32 @@ vector points:
 \end{equation}
 
 #+name: phi-field-normal-vector-angle
-#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
-from math import atan, pi
+#+begin_src python
+from math import atan, pi, degrees
 
-def calc_phi_normal_vector_angle(phi_normal_vector):
+
+def calc_phi_normal_azimuth(phi_normal_vector):
     """
-    Calculate the angle (measured in radians clockwise from North)
+    Calculate the angle (measured in degrees clockwise from North)
     to which the phi field's normal vector points.
     """
-    n_x = phi_normal_vector["n_x"]
-    n_y = phi_normal_vector["n_y"]
+    (n_x, n_y) = phi_normal_vector
     if n_x > 0:
         if n_y >= 0:
-            return 1/2 * pi - atan(n_y / n_x)
+            angle = 1/2 * pi - atan(n_y / n_x)
         elif n_y < 0:
-            return 1/2 * pi + atan(abs(n_y) / n_x)
+            angle = 1/2 * pi + atan(abs(n_y) / n_x)
     elif n_x < 0:
         if n_y >= 0:
-            return 3/2 * pi + atan(n_y / abs(n_x))
+            angle = 3/2 * pi + atan(n_y / abs(n_x))
         elif n_y < 0:
-            return 3/2 * pi - atan(n_y / n_x)
+            angle = 3/2 * pi - atan(n_y / n_x)
     else:
         if n_y >= 0:
-            return 0.0
+            angle = 0.0
         elif n_y < 0:
-            return pi
+            angle = pi
+    return degrees(angle)
 #+end_src
 
 Now that we can compute the fire front normal vector, we can find the
@@ -5169,7 +5169,7 @@ Fire Equations (pyretechnics.crown_fire)]].
 We will refer to the spread rate vector normal to the fire front in
 the following sections as $U$ with spatial components $U_x$ and $U_y$.
 
-**** Numerical Solution of the $\phi$ Field Equation
+*** Numerical Solution of the $\phi$ Field Equation
 
 In order to evolve the $\phi$ field through time and space, we must
 solve the following hyperbolic differential equation for the scalar
@@ -5193,7 +5193,7 @@ $B(r)$ as follows:
 \end{align}
 
 #+name: superbee-flux-limiter
-#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+#+begin_src python
 def calc_superbee_flux_limiter(dphi_up, dphi_loc):
     """
     TODO: Add docstring
@@ -5214,19 +5214,36 @@ and "south" values as follows:
   \frac{\partial \phi}{\partial y} &\approx \frac{\phi_{\text{north}} - \phi_{\text{south}}}{\Delta y}
 \end{align}
 
-#+name: dphi_partial_derivatives
-#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
-def calc_dphi_dx(phi_east, phi_west, dx):
+#+name: phi-field-spatial-gradients
+#+begin_src python
+import numpy as np
+
+
+def calc_dphi_dx(phi, u_x, dx, x, y):
     """
     TODO: Add docstring
     """
+    phi_east = calc_phi_east(phi, u_x, x, y)
+    phi_west = calc_phi_west(phi, u_x, x, y)
     return (phi_east - phi_west) / dx
 
-def calc_dphi_dy(phi_north, phi_south, dy):
+
+def calc_dphi_dy(phi, u_y, dy, x, y):
     """
     TODO: Add docstring
     """
+    phi_north = calc_phi_north(phi, u_y, x, y)
+    phi_south = calc_phi_south(phi, u_y, x, y)
     return (phi_north - phi_south) / dy
+
+
+def calc_phi_gradient(phi, u_x, u_y, dx, dy, x, y):
+    """
+    TODO: Add docstring
+    """
+    dphi_dx = calc_dphi_dx(phi, u_x, dx, x, y)
+    dphi_dy = calc_dphi_dy(phi, u_y, dy, x, y)
+    return np.asarray((dphi_dx, dphi_dy))
 #+end_src
 
 For the east face:
@@ -5245,19 +5262,18 @@ For the east face:
                         \end{cases}
 \end{align}
 
-#+name: phi_east
-#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+#+name: phi-east
+#+begin_src python
 def calc_phi_east(phi, u_x, x, y):
     """
     TODO: Add docstring
     """
     dphi_loc = phi[y][x+1] - phi[y][x]
-    u_xij = u_x[y][x]
-    if u_xij > 0:
+    if u_x > 0:
         dphi_up = phi[y][x] - phi[y][x-1]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x] + 0.5 * B * dphi_loc
-    elif u_xij < 0:
+    elif u_x < 0:
         dphi_up = phi[y][x+2] - phi[y][x+1]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x+1] - 0.5 * B * dphi_loc
@@ -5282,19 +5298,18 @@ For the west face:
                         \end{cases}
 \end{align}
 
-#+name: phi_west
-#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+#+name: phi-west
+#+begin_src python
 def calc_phi_west(phi, u_x, x, y):
     """
     TODO: Add docstring
     """
     dphi_loc = phi[y][x-1] - phi[y][x]
-    u_xij = u_x[y][x]
-    if u_xij > 0:
+    if u_x > 0:
         dphi_up = phi[y][x-2] - phi[y][x-1]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x-1] - 0.5 * B * dphi_loc
-    elif u_xij < 0:
+    elif u_x < 0:
         dphi_up = phi[y][x] - phi[y][x+1]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x] + 0.5 * B * dphi_loc
@@ -5319,19 +5334,18 @@ For the north face:
                          \end{cases}
 \end{align}
 
-#+name: phi_north
-#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+#+name: phi-north
+#+begin_src python
 def calc_phi_north(phi, u_y, x, y):
     """
     TODO: Add docstring
     """
     dphi_loc = phi[y-1][x] - phi[y][x]
-    u_yij = u_y[y][x]
-    if u_yij > 0:
+    if u_y > 0:
         dphi_up = phi[y][x] - phi[y+1][x]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x] + 0.5 * B * dphi_loc
-    elif u_yij < 0:
+    elif u_y < 0:
         dphi_up = phi[y-2][x] - phi[y-1][x]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y-1][x] - 0.5 * B * dphi_loc
@@ -5356,19 +5370,18 @@ For the south face:
                          \end{cases}
 \end{align}
 
-#+name: phi_south
-#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+#+name: phi-south
+#+begin_src python
 def calc_phi_south(phi, u_y, x, y):
     """
     TODO: Add docstring
     """
     dphi_loc = phi[y+1][x] - phi[y][x]
-    u_yij = u_y[y][x]
-    if u_yij > 0:
+    if u_y > 0:
         dphi_up = phi[y+2][x] - phi[y+1][x]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y+1][x] - 0.5 * B * dphi_loc
-    elif u_yij < 0:
+    elif u_y < 0:
         dphi_up = phi[y][x] - phi[y-1][x]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x] + 0.5 * B * dphi_loc
@@ -5387,9 +5400,11 @@ order Runge Kutta method as follows:
   \phi^{t + \Delta t} &= \frac{1}{2}\phi^t + \frac{1}{2} \left( \phi^* - \Delta t \left(U_x \frac{\phi^*_{\text{east}} - \phi^*_{\text{west}}}{\Delta x} + U_y \frac{\phi^*_{\text{north}} - \phi^*_{\text{south}}}{\Delta y} \right) \right)
 \end{align}
 
-#+name: phi_time
-#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+#+name: phi-time
+#+begin_src python
 import numpy as np
+from pyretechnics.burn_cells import burn_cell_toward_azimuth
+
 
 # FIXME: stub
 def identify_perimeter_cells(phi):
@@ -5399,55 +5414,70 @@ def identify_perimeter_cells(phi):
     return [[0,0]]
 
 
-# FIXME: stub
-def calc_u_x(phi, y, x):
-    """
-    TODO: Add docstring
-    """
-    return 0.5
-
-
-# FIXME: stub
-def calc_u_y(phi, y, x):
-    """
-    TODO: Add docstring
-    """
-    return 0.5
-
-
 def calc_phi_star(phi, u_x, u_y, dx, dy, dt, x, y):
     """
-    TODO: Add docstring
+    Return an estimate for phi[y][x] at time (t + dt) given these inputs:
+    - phi :: 2D float array of values in [-1,1]
+    - u_x :: m/min
+    - u_y :: m/min
+    - dx  :: meters
+    - dy  :: meters
+    - dt  :: minutes
+    - x   :: integer column index in phi
+    - y   :: integer row index in phi
     """
-    phi_east  = calc_phi_east(phi, u_x, x, y)
-    phi_west  = calc_phi_west(phi, u_x, x, y)
-    phi_north = calc_phi_north(phi, u_y, x, y)
-    phi_south = calc_phi_south(phi, u_y, x, y)
-    dphi_dx   = calc_dphi_dx(phi_east, phi_west, dx)
-    dphi_dy   = calc_dphi_dy(phi_north, phi_south, dy)
-    dphi_dt   = u_x[y][x] * dphi_dx + u_y[y][x] * dphi_dy
+    spread_vector   = np.asarray((u_x, u_y))
+    gradient_vector = calc_phi_gradient(phi, u_x, u_y, dx, dy, x, y)
+    dphi_dt         = np.dot(spread_vector, gradient_vector)
     return phi[y][x] - dphi_dt * dt
 
 
-def calc_phi_next_timestep(phi, u_x, u_y, dx, dy, dt, perimeter_cells):
+# TODO: Add exit conditions for a max_duration or no perimeter cells found and that should be the spread algorithm!
+# TODO: Store the fire behavior values computed in the first perimeter_cells loop in output arrays.
+def calc_phi_next_timestep(space_time_cubes, phi, dx, dy, dt, t):
     """
     TODO: Add docstring
+    NOTE:
+    - space_time_cubes and phi must have the same spatial resolution.
+    - space_time_cubes must support temporal lookups in minutes.
+    - dx is the cell width in meters.
+    - dy is the cell height in meters.
+    - dt is the timestep in minutes.
+    - t is the start time in minutes.
     """
+    perimeter_cells = identify_perimeter_cells(phi)
+
     phi_star = np.copy(phi)
+    # TODO: Make this into a ufunc and apply directly to the array
     for [y, x] in perimeter_cells:
+        # Calculate the spread vector normal to the fire front on the slope-tangential plane
+        # FIXME: This only gives the wavelet spread rate, not the fire front spread rate. Use Val's functions instead.
+        space_time_coordinate = (t, y, x)
+        normal_vector         = calc_phi_normal_vector(phi, dx, dy, x, y)
+        normal_azimuth        = calc_phi_normal_azimuth(normal_vector)
+        fire_behavior         = burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, normal_azimuth)
+        (u_x, u_y, u_z)       = fire_behavior["spread_rate"] * fire_behavior["spread_direction"]
+
+        # Calculate the gradient of phi given this spread vector projected onto the horizontal plane
+        # Update phi_star based on the dot product of the spread vector and the gradient vector
         phi_star[y][x] = calc_phi_star(phi, u_x, u_y, dx, dy, dt, x, y)
 
     perimeter_cells_star = identify_perimeter_cells(phi_star)
 
-    u_x_star = np.zeros_like(u_x)
-    u_y_star = np.zeros_like(u_y)
-    for [y, x] in perimeter_cells_star:
-        u_x_star[y][x] = calc_u_x(phi_star, y, x)
-        u_y_star[y][x] = calc_u_y(phi_star, y, x)
-
     phi_star_star = np.copy(phi_star)
+    # TODO: Make this into a ufunc and apply directly to the array
     for [y, x] in perimeter_cells_star:
-        phi_star_star[y][x] = calc_phi_star(phi_star, u_x_star, u_y_star, dx, dy, dt, x, y)
+        # Calculate the spread vector normal to the fire front on the slope-tangential plane
+        # FIXME: This only gives the wavelet spread rate, not the fire front spread rate. Use Val's functions instead.
+        space_time_coordinate = (t + dt, y, x)
+        normal_vector         = calc_phi_normal_vector(phi_star, dx, dy, x, y)
+        normal_azimuth        = calc_phi_normal_azimuth(normal_vector)
+        fire_behavior         = burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, normal_azimuth)
+        (u_x, u_y, u_z)       = fire_behavior["spread_rate"] * fire_behavior["spread_direction"]
+
+        # Calculate the gradient of phi_star given this spread vector projected onto the horizontal plane
+        # Update phi_star_star based on the dot product of the spread vector and the gradient vector
+        phi_star_star[y][x] = calc_phi_star(phi_star, u_x, u_y, dx, dy, dt, x, y)
 
     return (phi + phi_star_star) / 2.0
 #+end_src
@@ -5460,7 +5490,7 @@ level set corresponding to $\phi = 0$.
 ...RESUME HERE...
 
 # TODO: Implement U_x and U_y calculations using surface and crown
-# equations from the ELMFire paper and the online technical reference:
+# equations from the ELMFIRE paper and the online technical reference:
   https://github.com/lautenberger/elmfire/blob/main/docs/tech_ref.rst
 
 ** For Users
